--- a/index.html
+++ b/index.html
@@ -9,109 +9,127 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--Шапка страницы-->
     <header class="header">
-      <nav>
-        <a class="logo list" href="./index.html"
-          ><span class="accent">Web</span>&nbsp;Studio</a
-        >
-        <ul class="site-nav font-nav list">
-          <li><a class="list" href="">Студия</a></li>
-          <li><a class="list" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="list" href="">Контакты</a></li>
+      <div class="container">
+        <nav>
+          <a class="logo list" href="./index.html"
+            ><span class="accent">Web</span>&nbsp;Studio</a
+          >
+          <ul class="site-nav font-nav list">
+            <li><a class="list" href="">Студия</a></li>
+            <li><a class="list" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="list" href="">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="site-contact font-nav list">
+          <li>
+            <a class="contact-mail list" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-tel list" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="site-contact font-nav list">
-        <li>
-          <a class="contact-mail list" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-tel list" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!--Уникальный контент страницы-->
     <main>
       <!--Наш герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="hero-container container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button button" type="button">
+            Заказать услугу
+          </button>
+        </div>
       </section>
       <!--Преимущества компании-->
       <section class="advant">
-        <ul class="list">
-          <li>
-            <h3 class="advant-title">Внимание к деталям</h3>
-            <p class="advant-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="advant-title">Пунктуальность</h3>
-            <p class="advant-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="advant-title">Планирование</h3>
-            <p class="advant-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="advant-title">Современные технологии</h3>
-            <p class="advant-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li>
+              <h3 class="advant-title">Внимание к деталям</h3>
+              <p class="advant-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="advant-title">Пунктуальность</h3>
+              <p class="advant-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="advant-title">Планирование</h3>
+              <p class="advant-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="advant-title">Современные технологии</h3>
+              <p class="advant-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Чем мы занимаемся-->
       <section class="directions">
-        <h2 class="directions-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <a href="">
-              <img
-                src="./images/laptop.jpg"
-                alt="laptop"
-                width="370"
-                height="294"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/phone.jpg"
-                alt="phone"
-                width="370"
-                height="294"
-              />
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/tablet.jpg"
-                alt="tablet"
-                width="370"
-                height="294"
-              />
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="directions-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <a href="">
+                <img
+                  src="./images/laptop.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/phone.jpg"
+                  alt="phone"
+                  width="370"
+                  height="294"
+                />
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/tablet.jpg"
+                  alt="tablet"
+                  width="370"
+                  height="294"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
       <section class="our-team">
