--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
     <!--Шапка страницы-->
     <header class="header">
       <div class="container">
-        <nav>
+        <nav class="header-nav">
           <a class="logo list" href="./index.html"
             ><span class="accent">Web</span>&nbsp;Studio</a
           >
           <ul class="site-nav font-nav list">
-            <li><a class="list" href="">Студия</a></li>
-            <li><a class="list" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="list" href="">Контакты</a></li>
+            <li class="item"><a class="list" href="">Студия</a></li>
+            <li class="item">
+              <a class="list" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="item"><a class="list" href="">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="site-contact font-nav list">
-          <li>
+          <li class="item">
             <a class="contact-mail list" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a class="contact-tel list" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
@@ -59,7 +61,7 @@
         </div>
       </section>
       <!--Преимущества компании-->
-      <section class="advant">
+      <section class="advant section">
         <div class="container">
           <ul class="list">
             <li>
@@ -94,13 +96,14 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="directions">
+      <section class="directions section">
         <div class="container">
           <h2 class="directions-title">Чем мы занимаемся</h2>
           <ul class="list">
-            <li>
+            <li class="item">
               <a href="">
                 <img
+                  class="item-img"
                   src="./images/laptop.jpg"
                   alt="laptop"
                   width="370"
@@ -108,9 +111,10 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
+                  class="item-img"
                   src="./images/phone.jpg"
                   alt="phone"
                   width="370"
@@ -118,9 +122,10 @@
                 />
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
+                  class="item-img"
                   src="./images/tablet.jpg"
                   alt="tablet"
                   width="370"
@@ -132,67 +137,75 @@
         </div>
       </section>
       <!--Наша команда-->
-      <section class="our-team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="list">
-          <li class="item">
-            <img
-              src="./images/member1.jpg"
-              alt="member1"
-              width="270"
-              height="260"
-            />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/member2.jpg"
-              alt="member2"
-              width="270"
-              height="260"
-            />
-            <h3 class="name">Ольга Репина</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/member3.jpg"
-              alt="member3"
-              width="270"
-              height="260"
-            />
-            <h3 class="name">Николай Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/member4.jpg"
-              alt="member4"
-              width="270"
-              height="260"
-            />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+      <section class="our-team section">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="list">
+            <li class="item">
+              <img
+                class="item-img"
+                src="./images/member1.jpg"
+                alt="member1"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">Игорь Демьяненко</h3>
+              <p class="profession">Product Designer</p>
+            </li>
+            <li class="item">
+              <img
+                class="item-img"
+                src="./images/member2.jpg"
+                alt="member2"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">Ольга Репина</h3>
+              <p class="profession">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <img
+                class="item-img"
+                src="./images/member3.jpg"
+                alt="member3"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">Николай Тарасов</h3>
+              <p class="profession">Marketing</p>
+            </li>
+            <li class="item">
+              <img
+                class="item-img"
+                src="./images/member4.jpg"
+                alt="member4"
+                width="270"
+                height="260"
+              />
+              <h3 class="name">Михаил Ермаков</h3>
+              <p class="profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал страницы-->
     <footer class="footer">
       <section>
-        <a class="logo list" href="./index.html"
-          ><span class="accent">Web</span>&nbsp;Studio</a
-        >
-        <address class="city-street">г. Киев, пр-т Леси Украинки, 26</address>
-        <address>
-          <a class="footer-mail list" href="mailto:info@example.com"
-            >info@example.com</a
-          ><br />
-          <a class="footer-tel list" href="tel:+380991111111"
-            >+38 099 111 11 11</a
+        <div class="container">
+          <a class="logo list" href="./index.html"
+            ><span class="accent">Web</span>&nbsp;Studio</a
           >
-        </address>
+          <address class="city-street">г. Киев, пр-т Леси Украинки, 26</address>
+          <address class="footer-contacts">
+            <a class="footer-mail list" href="mailto:info@example.com"
+              >info@example.com</a
+            ><br />
+            <a class="footer-tel list" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </address>
+        </div>
       </section>
     </footer>
   </body>
