--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
       <section class="advant section">
         <div class="container">
           <ul class="list">
-            <li>
+            <li class="item">
               <h3 class="advant-title">Внимание к деталям</h3>
               <p class="advant-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="advant-title">Пунктуальность</h3>
               <p class="advant-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="advant-title">Планирование</h3>
               <p class="advant-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="advant-title">Современные технологии</h3>
               <p class="advant-text">
                 Значимость этих проблем настолько очевидна, что реализация
