--- a/portfolio.html
+++ b/portfolio.html
@@ -21,169 +21,186 @@
   <body>
     <!--Шапка страницы-->
     <header class="header">
-      <nav>
-        <a class="logo list" href="./index.html"
-          ><span class="accent">Web</span>&nbsp;Studio</a
-        >
-        <ul class="site-nav font-nav list">
-          <li><a class="list" href="./index.html">Студия</a></li>
-          <li><a class="list" href="">Портфолио</a></li>
-          <li><a class="list" href="">Контакты</a></li>
+      <div class="container">
+        <nav class="header-nav">
+          <a class="logo list" href="./index.html"
+            ><span class="accent">Web</span>&nbsp;Studio</a
+          >
+          <ul class="site-nav font-nav list">
+            <li class="item"><a class="list" href="./index.html">Студия</a></li>
+            <li class="item">
+              <a class="list" href="">Портфолио</a>
+            </li>
+            <li class="item"><a class="list" href="">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="site-contact font-nav list">
+          <li class="item">
+            <a class="contact-mail list" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="contact-tel list" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="site-contact font-nav list">
-        <li>
-          <a class="contact-mail list" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-tel list" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <!--Уникальный контент страницы -->
     <main>
       <!--Продукты компании и их навигация-->
       <section class="products">
-        <h1 title="products"></h1>
-        <ul class="list">
-          <li><button class="button" type="button">Все</button></li>
-          <li><button class="button" type="button">Веб-сайты</button></li>
-          <li><button class="button" type="button">Приложения</button></li>
-          <li><button class="button" type="button">Дизайн</button></li>
-          <li><button class="button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/web-site1.jpg"
-                  alt="web-site1"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/design1.jpg"
-                  alt="design1"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/app1.jpg"
-                  alt="app1"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/marketing1.jpg"
-                  alt="marketing1"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/app2.jpg"
-                  alt="app2"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">Приложение</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/web-site2.jpg"
-                  alt="web-site2"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/design2.jpg"
-                  alt="design2"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/marketing2.jpg"
-                  alt="marketing2"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">Маркетинг</p>
-              </li>
-            </ul>
-          </li>
-          <li class="item">
-            <ul class="list">
-              <li>
-                <img
-                  src="./images/app3.jpg"
-                  alt="app3"
-                  width="370"
-                  height="294"
-                />
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Приложение</p>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="products-title" title="products"></h1>
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <button class="button" type="button">Все</button>
+            </li>
+            <li class="nav-item">
+              <button class="button" type="button">Веб-сайты</button>
+            </li>
+            <li class="nav-item">
+              <button class="button" type="button">Приложения</button>
+            </li>
+            <li class="nav-item">
+              <button class="button" type="button">Дизайн</button>
+            </li>
+            <li class="nav-item">
+              <button class="button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="products-list list">
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/web-site1.jpg"
+                    alt="web-site1"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/design1.jpg"
+                    alt="design1"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/app1.jpg"
+                    alt="app1"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/marketing1.jpg"
+                    alt="marketing1"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/app2.jpg"
+                    alt="app2"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="text">Приложение</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/web-site2.jpg"
+                    alt="web-site2"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/design2.jpg"
+                    alt="design2"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/marketing2.jpg"
+                    alt="marketing2"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </li>
+              </ul>
+            </li>
+            <li class="item">
+              <ul class="list">
+                <li>
+                  <img
+                    src="./images/app3.jpg"
+                    alt="app3"
+                    width="370"
+                    height="294"
+                  />
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал страницы-->
