Заканчивает расположение элементов на странице Портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
     <!--Уникальный контент страницы -->
     <main>
       <!--Продукты компании и их навигация-->
-      <section class="products">
+      <section class="products section">
         <div class="container">
           <h1 class="products-title" title="products"></h1>
           <ul class="nav-list list">
@@ -73,129 +73,156 @@
             </li>
           </ul>
           <ul class="products-list list">
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/web-site1.jpg"
                     alt="web-site1"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Технокряк</h2>
-                  <p class="text">Веб-сайт</p>
+                  <div class="img-description">
+                    <h2 class="title">Технокряк</h2>
+                    <p class="text">Веб-сайт</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/design1.jpg"
                     alt="design1"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                  <p class="text">Дизайн</p>
+                  <div class="img-description">
+                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                    <p class="text">Дизайн</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/app1.jpg"
                     alt="app1"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Ресторан Seafood</h2>
-                  <p class="text">Приложение</p>
+                  <div class="img-description">
+                    <h2 class="title">Ресторан Seafood</h2>
+                    <p class="text">Приложение</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/marketing1.jpg"
                     alt="marketing1"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Проект Prime</h2>
-                  <p class="text">Маркетинг</p>
+                  <div class="img-description">
+                    <h2 class="title">Проект Prime</h2>
+                    <p class="text">Маркетинг</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/app2.jpg"
                     alt="app2"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Проект Boxes</h2>
-                  <p class="text">Приложение</p>
+                  <div class="img-description">
+                    <h2 class="title">Проект Boxes</h2>
+                    <p class="text">Приложение</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/web-site2.jpg"
                     alt="web-site2"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Inspiration has no Borders</h2>
-                  <p class="text">Веб-сайт</p>
+                  <div class="img-description">
+                    <h2 class="title">Inspiration has no Borders</h2>
+                    <p class="text">Веб-сайт</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/design2.jpg"
                     alt="design2"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Издание Limited Edition</h2>
-                  <p class="text">Дизайн</p>
+                  <div class="img-description">
+                    <h2 class="title">Издание Limited Edition</h2>
+                    <p class="text">Дизайн</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/marketing2.jpg"
                     alt="marketing2"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Проект LAB</h2>
-                  <p class="text">Маркетинг</p>
+                  <div class="img-description">
+                    <h2 class="title">Проект LAB</h2>
+                    <p class="text">Маркетинг</p>
+                  </div>
                 </li>
               </ul>
             </li>
-            <li class="item">
+            <li class="products-item">
               <ul class="list">
-                <li>
+                <li class="item-content">
                   <img
+                    class="item-img"
                     src="./images/app3.jpg"
                     alt="app3"
                     width="370"
                     height="294"
                   />
-                  <h2 class="title">Growing Business</h2>
-                  <p class="text">Приложение</p>
+                  <div class="img-description">
+                    <h2 class="title">Growing Business</h2>
+                    <p class="text">Приложение</p>
+                  </div>
                 </li>
               </ul>
             </li>
@@ -206,18 +233,20 @@
     <!--Подвал страницы-->
     <footer class="footer">
       <section>
-        <a class="logo list" href="./index.html"
-          ><span class="accent">Web</span>&nbsp;Studio</a
-        >
-        <address class="city-street">г. Киев, пр-т Леси Украинки, 26</address>
-        <address>
-          <a class="footer-mail list" href="mailto:info@example.com"
-            >info@example.com</a
-          ><br />
-          <a class="footer-tel list" href="tel:+380991111111"
-            >+38 099 111 11 11</a
+        <div class="container">
+          <a class="logo list" href="./index.html"
+            ><span class="accent">Web</span>&nbsp;Studio</a
           >
-        </address>
+          <address class="city-street">г. Киев, пр-т Леси Украинки, 26</address>
+          <address class="footer-contacts">
+            <a class="footer-mail list" href="mailto:info@example.com"
+              >info@example.com</a
+            ><br />
+            <a class="footer-tel list" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </address>
+        </div>
       </section>
     </footer>
   </body>
