--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       <!--Наш герой-->
       <section class="hero">
         <div class="hero-container container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-title">
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
           <button class="hero-button button" type="button">
             Заказать услугу
           </button>
